--- a/package.json
+++ b/package.json
@@ -43,9 +43,9 @@
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
     "prettier": "^3.3.2",
+    "tsup": "^8.1.0",
     "typescript": "^5.4.5",
-    "vitest": "^0.34.1",
-    "tsup": "^8.1.0"
+    "vitest": "^0.34.1"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
@@ -57,5 +57,9 @@
     "*.{js,jsx,ts,tsx,less,md}": [
       "prettier --write"
     ]
+  },
+  "dependencies": {
+    "@magicdawn/finder-sort": "^0.3.4",
+    "fast-sort": "^3.4.0"
   }
 }
