feat: setup tsup & vitest & add tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "resolveJsonModule": true,
     "target": "ES2020",
     "module": "CommonJS",
-    "strictNullChecks": true,
+    "strict": true,
     "skipLibCheck": true
   },
   "ts-node": {
