--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "vitest run",
-    "prepare": "husky install",
+    "prepare": "husky",
     "test:dev": "vitest",
     "test-cover": "vitest run --coverage",
     "dev": "tsup --watch",
@@ -32,6 +32,7 @@
   "homepage": "https://github.com/magicdawn/fast-sort-lens#readme",
   "packageManager": "pnpm@9.3.0+sha512.ee7b93e0c2bd11409c6424f92b866f31d3ea1bef5fbe47d3c7500cdc3c9668833d2e55681ad66df5b640c61fa9dc25d546efa54d76d7f8bf54b13614ac293631",
   "devDependencies": {
+    "@magicdawn/finder-sort": "^0.4.0",
     "@magicdawn/prettier-config": "^0.0.3",
     "@swc/core": "^1.3.76",
     "@types/node": "^20.5.0",
@@ -59,7 +60,6 @@
     ]
   },
   "dependencies": {
-    "@magicdawn/finder-sort": "^0.3.4",
     "fast-sort": "^3.4.0"
   }
 }
