--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,14 @@
 {
   "include": ["src/**/*"],
   "compilerOptions": {
-    "rootDir": "src",
-    "outDir": "lib",
-    "allowSyntheticDefaultImports": true,
+    "target": "es2022",
+    "module": "esnext",
+    "moduleResolution": "bundler",
     "esModuleInterop": true,
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "target": "ES2020",
-    "module": "CommonJS",
+    "allowSyntheticDefaultImports": true,
     "strict": true,
-    "skipLibCheck": true
-  },
-  "ts-node": {
-    "swc": true
+    "noImplicitOverride": true,
+    "skipLibCheck": true,
+    "noEmit": true
   }
 }
